- Build starter html css - build module to handle view layer for calculator - add view tests stub

--- a/test.html
+++ b/test.html
@@ -4,10 +4,6 @@
     <title>QUnit Test Suite</title>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.14.0/qunit.css" type="text/css" media="screen">  
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.14.0/qunit.js"></script>  
-    <!-- Your project file goes here -->  
-    <script type="text/javascript" src="src/calculator.js"></script> 
-    <!-- Your tests file goes here -->  
-    <script type="text/javascript" src="test/calculator_test.js"></script>
   </head>  
   <body>  
     <h1 id="qunit-header">QUnit Test Suite</h1>  
@@ -16,6 +12,12 @@
     <h2 id="qunit-userAgent"></h2>  
     <ol id="qunit-tests"></ol>  
 
+    <!-- Your project file goes here -->  
+    <script type="text/javascript" src="src/calculator.js"></script> 
+    <script type="text/javascript" src="src/view.js"></script> 
+    <!-- Your tests file goes here -->  
+    <script type="text/javascript" src="test/calculator_test.js"></script>
+    <script type="text/javascript" src="test/calculator_view_test.js"></script>
   </body>  
 </html>  
 
