--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <title>QUnit Test Suite</title>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.14.0/qunit.css" type="text/css" media="screen">  
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.14.0/qunit.js"></script>  
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen">  
   </head>  
   <body>  
     <h1 id="qunit-header">QUnit Test Suite</h1>  
