- Integration test behavior of clicking keypad to score a value - sketch out logic, aim to refactor

--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <title>QUnit Test Suite</title>  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.14.0/qunit.css" type="text/css" media="screen">  
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/qunit/1.14.0/qunit.js"></script>  
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>  
     <link rel="stylesheet" href="style.css" type="text/css" media="screen">  
   </head>  
   <body>  
